ejercicios-BISON/bison/ejemplo1/parser/interpreter.output
Grammar

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: ε
    3         | stmtlist '\n'
    4         | stmtlist exp '\n'
    5         | stmtlist error '\n'

    6 exp: NUMBER
    7    | exp '+' exp
    8    | exp '-' exp
    9    | exp '*' exp
   10    | exp '/' exp
   11    | '(' exp ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 5
    '(' (40) 11
    ')' (41) 11
    '*' (42) 9
    '+' (43) 7
    '-' (45) 8
    '/' (47) 10
    error (256) 5
    NUMBER (258) 6


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    program (12)
        on left: 1
        on right: 0
    stmtlist (13)
        on left: 2 3 4 5
        on right: 1 3 4 5
    exp (14)
        on left: 6 7 8 9 10 11
        on right: 4 7 8 9 10 11


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmtlist)

    program   go to state 1
    stmtlist  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmtlist •
    3 stmtlist: stmtlist • '\n'
    4         | stmtlist • exp '\n'
    5         | stmtlist • error '\n'

    error   shift, and go to state 4
    NUMBER  shift, and go to state 5
    '\n'    shift, and go to state 6
    '('     shift, and go to state 7

    $end  reduce using rule 1 (program)

    exp  go to state 8


State 3

    0 $accept: program $end •

    $default  accept


State 4

    5 stmtlist: stmtlist error • '\n'

    '\n'  shift, and go to state 9


State 5

    6 exp: NUMBER •

    $default  reduce using rule 6 (exp)


State 6

    3 stmtlist: stmtlist '\n' •

    $default  reduce using rule 3 (stmtlist)


State 7

   11 exp: '(' • exp ')'

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 7

    exp  go to state 10


State 8

    4 stmtlist: stmtlist exp • '\n'
    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp

    '+'   shift, and go to state 11
    '-'   shift, and go to state 12
    '*'   shift, and go to state 13
    '/'   shift, and go to state 14
    '\n'  shift, and go to state 15


State 9

    5 stmtlist: stmtlist error '\n' •

    $default  reduce using rule 5 (stmtlist)


State 10

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   11    | '(' exp • ')'

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    ')'  shift, and go to state 16


State 11

    7 exp: exp '+' • exp

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 7

    exp  go to state 17


State 12

    8 exp: exp '-' • exp

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 7

    exp  go to state 18


State 13

    9 exp: exp '*' • exp

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 7

    exp  go to state 19


State 14

   10 exp: exp '/' • exp

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 7

    exp  go to state 20


State 15

    4 stmtlist: stmtlist exp '\n' •

    $default  reduce using rule 4 (stmtlist)


State 16

   11 exp: '(' exp ')' •

    $default  reduce using rule 11 (exp)


State 17

    7 exp: exp • '+' exp
    7    | exp '+' exp •
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp

    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    $default  reduce using rule 7 (exp)


State 18

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    8    | exp '-' exp •
    9    | exp • '*' exp
   10    | exp • '/' exp

    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    $default  reduce using rule 8 (exp)


State 19

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
    9    | exp '*' exp •
   10    | exp • '/' exp

    $default  reduce using rule 9 (exp)


State 20

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   10    | exp '/' exp •

    $default  reduce using rule 10 (exp)
